plugins {
    id 'io.quarkus' version "$quarkusPluginVersion"
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation project(':common')
    implementation "io.quarkus:quarkus-avro"
    implementation "io.quarkus:quarkus-confluent-registry-avro"
    implementation 'io.quarkus:quarkus-minikube'
    implementation 'io.quarkus:quarkus-scheduler'
    implementation 'io.quarkus:quarkus-kubernetes'
    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka:3.10.0'
    implementation 'io.quarkus:quarkus-arc'

    // REST (Quarkus REST / RESTEasy Reactive)
    implementation 'io.quarkus:quarkus-rest-client-jackson'
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-rest-client'

    // Database
    implementation "io.quarkus:quarkus-hibernate-orm"
    implementation "io.quarkus:quarkus-hibernate-orm-panache"
    implementation "io.quarkus:quarkus-jdbc-postgresql"

    // Confluent serde
    implementation("io.confluent:kafka-avro-serializer:7.2.0") {
        exclude group: "org.slf4j", module: "slf4j-log4j12"
    }

    // Jackson (для парсинга JSON)
    implementation 'io.quarkus:quarkus-jackson:3.12.2'

    // Lombok (для автогенерации геттеров/сеттеров и т.д.)
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // XGBoost
    implementation 'ml.dmlc:xgboost4j_2.13:3.1.1'

    // TA4J - Technical Analysis Library
    implementation 'org.ta4j:ta4j-core:0.21.0'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'org.mockito:mockito-core:5.11.0'
}